# perceptive_legged_control

./: AGEBT.md  CMakeLists.txt  README.md  package.xml  perceptive_legged_control_plugins.xml
config/: perceptive_p1_controllers.yaml  perceptive_target.yaml
config/p1/: reference.info  task.info
include/perceptive_legged_control/: PerceptiveTerrainBuffer.h
include/perceptive_legged_control/constraint/: FootCollisionConstraint.h  FootPlacementConstraint.h  FootPlacementConstraintCBF.h  SphereSdfConstraint.h  SwingFootPlacementConstraintCBF.h
include/perceptive_legged_control/controller/: PerceptiveLeggedCheaterController.h  PerceptiveLeggedController.h
include/perceptive_legged_control/interface/: ConvexRegionSelector.h  PerceptiveLeggedInterface.h  PerceptiveLeggedPrecomputation.h  PerceptiveSwitchedModelReferenceManager.h  PlanarSignedDistanceField.h
include/perceptive_legged_control/synchronized_module/: PlanarTerrainReceiver.h
include/perceptive_legged_control/visualization/: FootPlacementVisualization.h  SphereVisualization.h
launch/: perceptive_p1_sim.launch.py  perceptive_stack.launch.py
src/: PerceptiveSessionLogger.cpp  PerceptiveTargetTrajectoriesPublisher.cpp  PerceptiveTerrainBuffer.cpp
src/constraint/: FootCollisionConstraint.cpp  FootPlacementConstraint.cpp  FootPlacementConstraintCBF.cpp  SphereSdfConstraint.cpp  SwingFootPlacementConstraintCBF.cpp
src/controller/: PerceptiveLeggedCheaterController.cpp  PerceptiveLeggedController.cpp
src/interface/: ConvexRegionSelector.cpp  PerceptiveLeggedInterface.cpp  PerceptiveLeggedPrecomputation.cpp  PerceptiveSwitchedModelReferenceManager.cpp  PlanarSignedDistanceField.cpp
src/synchronized_module/: PlanarTerrainReceiver.cpp
src/visualization/: FootPlacementVisualization.cpp  SphereVisualization.cpp
