<?xml version="1.0"?>
<package format="3">
  <name>perceptive_legged_control</name>
  <version>0.0.1</version>
  <description>Perceptive terrain and target trajectory nodes for legged_control.</description>
  <maintainer email="beauhao@example.com">Beauhao</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>

  <depend>convex_plane_decomposition</depend>
  <depend>convex_plane_decomposition_msgs</depend>
  <depend>convex_plane_decomposition_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_sdf</depend>
  <depend>legged_controllers</depend>
  <depend>legged_interface</depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_centroidal_model</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_oc</depend>
  <depend>ocs2_msgs</depend>
  <depend>ocs2_legged_robot</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_ros_interfaces</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/perceptive_legged_control_plugins.xml"/>
  </export>
</package>
